Create html-markup, edit svg-sprite, fix font

--- a/index.html
+++ b/index.html
@@ -28,6 +28,185 @@
   </head>
 
   <body>
-    Hello
+    <aside class="sidebar">
+      <h1>
+        <svg><use href="./svg/sprite.svg#icon-setting"></use></svg>Dashboard<span>v.01</span>
+      </h1>
+      <nav>
+        <ul>
+          <li>
+            <a href=""
+              ><div>
+                <svg><use href="./svg/sprite.svg#icon-key"></use></svg>
+                Dashboard
+              </div>
+              <svg><use href="./svg/sprite.svg#icon-arrow"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><div>
+                <svg><use href="./svg/sprite.svg#icon-cube"></use></svg>
+                Product
+              </div>
+              <svg><use href="./svg/sprite.svg#icon-arrow"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><div>
+                <svg><use href="./svg/sprite.svg#icon-person"></use></svg>
+                Customers
+              </div>
+              <svg><use href="./svg/sprite.svg#icon-arrow"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><div>
+                <svg><use href="./svg/sprite.svg#icon-wallet"></use></svg>
+                Income
+              </div>
+              <svg><use href="./svg/sprite.svg#icon-arrow"></use></svg
+            ></a>
+          </li>
+          <li>
+            <a href=""
+              ><div>
+                <svg><use href="./svg/sprite.svg#icon-discount"></use></svg>
+                Promote
+              </div>
+              <svg><use href="./svg/sprite.svg#icon-arrow"></use></svg>
+            </a>
+          </li>
+          <li>
+            <a href=""
+              ><div>
+                <svg><use href="./svg/sprite.svg#icon-question"></use></svg>
+                Help
+              </div>
+              <svg><use href="./svg/sprite.svg#icon-arrow"></use></svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div>
+        <img />
+        <div>
+          <p>Evano</p>
+          <p>Project Manager</p>
+        </div>
+      </div>
+    </aside>
+
+    <section class="sidebar">
+      <p>Hello Evano 👋🏼,</p>
+
+      <div>
+        <div>
+          <div>
+            <h2>All Customers</h2>
+            <p>Active Members</p>
+          </div>
+          <form>
+            <svg><use href="./svg/sprite.svg#icon-search"></use></svg>
+            <input type="text" placeholder="Search" />
+          </form>
+        </div>
+
+        <table>
+          <tr>
+            <th>Customer Name</th>
+            <th>Company</th>
+            <th>Phone Number</th>
+            <th>Country</th>
+            <th>Маршрут</th>
+            <th>Status</th>
+          </tr>
+          <tr>
+            <td>Jane Cooper</td>
+            <td>Microsoft</td>
+            <td>(225) 555-0118</td>
+            <td>jane@microsoft.com</td>
+            <td>United States</td>
+            <td><div>Active</div></td>
+          </tr>
+          <tr>
+            <td>Floyd Miles</td>
+            <td>Yahoo</td>
+            <td>(205) 555-0100</td>
+            <td>floyd@yahoo.com</td>
+            <td>Kiribati</td>
+            <td><div>Inactive</div></td>
+          </tr>
+          <tr>
+            <td>Ronald Richards</td>
+            <td>Adobe</td>
+            <td>(302) 555-0107</td>
+            <td>ronald@adobe.com</td>
+            <td>Israel</td>
+            <td><div>Inactive</div></td>
+          </tr>
+          <tr>
+            <td>Marvin McKinney</td>
+            <td>Tesla</td>
+            <td>(252) 555-0126</td>
+            <td>marvin@tesla.com</td>
+            <td>Iran</td>
+            <td><div>Active</div></td>
+          </tr>
+          <tr>
+            <td>Jerome Bell</td>
+            <td>Google</td>
+            <td>(629) 555-0129</td>
+            <td>jerome@google.com</td>
+            <td>Réunion</td>
+            <td><div>Active</div></td>
+          </tr>
+          <tr>
+            <td>Kathryn Murphy</td>
+            <td>Microsoft</td>
+            <td>(406) 555-0120</td>
+            <td>kathryn@microsoft.com</td>
+            <td>Curaçao</td>
+            <td><div>Active</div></td>
+          </tr>
+          <tr>
+            <td>Jacob Jones</td>
+            <td>Yahoo</td>
+            <td>(208) 555-0112</td>
+            <td>jacob@yahoo.com</td>
+            <td>Brazil</td>
+            <td><div>Active</div></td>
+          </tr>
+          <tr>
+            <td>Kristin Watson</td>
+            <td>Facebook</td>
+            <td>(704) 555-0127</td>
+            <td>kristin@facebook.com</td>
+            <td>Åland Islands</td>
+            <td><div>Inactive</div></td>
+          </tr>
+        </table>
+
+        <div>
+          <p>Showing data 1 to 8 of 256K entries</p>
+          <div>
+            <button>
+              <svg><use href="./svg/sprite.svg#icon-arrow-small"></use></svg>
+            </button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <span>...</span>
+            <button>40</button>
+            <button>
+              <svg><use href="./svg/sprite.svg#icon-arrow-small"></use></svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
