--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
               <th>Customer Name</th>
               <th>Company</th>
               <th>Phone Number</th>
+              <th>Email</th>
               <th>Country</th>
-              <th>Маршрут</th>
               <th>Status</th>
             </tr>
             <tr>
