--- a/index.html
+++ b/index.html
@@ -29,216 +29,230 @@
 
   <body>
     <header class="header">
-      <div class="container container--flex">
+      <div class="container container--flex container--no-gap">
         <h1 class="title">
           <svg class="title__icon"><use href="./svg/sprite.svg#icon-setting"></use></svg
           >Dashboard<span class="title__version">v.01</span>
         </h1>
-        <p class="welcome-text">Hello, <span>Evano</span> 👋🏼</p>
+        <div class="welcome-text-wrapper">
+          <p class="welcome-text">Hello, <span>Evano</span> 👋🏼</p>
+        </div>
       </div>
     </header>
 
     <main>
-      <div class="container container--flex">
-        <div class="bar">
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a class="menu__link" href=""
-                  ><div class="menu__icon-and-text">
-                    <svg class="menu__icon"><use href="./svg/sprite.svg#icon-key"></use></svg>
-                    <span class="menu__text">Dashboard</span>
-                  </div>
-                  <svg class="menu__icon-arrow"><use href="./svg/sprite.svg#icon-arrow"></use></svg
-                ></a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href=""
-                  ><div class="menu__icon-and-text">
-                    <svg class="menu__icon"><use href="./svg/sprite.svg#icon-cube"></use></svg>
-                    <span class="menu__text">Product</span>
-                  </div>
-                  <svg class="menu__icon-arrow"><use href="./svg/sprite.svg#icon-arrow"></use></svg
-                ></a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link is-active" href=""
-                  ><div class="menu__icon-and-text">
-                    <svg class="menu__icon">
-                      <use href="./svg/sprite.svg#icon-person"></use>
+      <section>
+        <div class="container container--flex container--no-gap">
+          <div class="bar">
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a class="menu__link" href=""
+                    ><div class="menu__icon-and-text">
+                      <svg class="menu__icon"><use href="./svg/sprite.svg#icon-key"></use></svg>
+                      <span class="menu__text">Dashboard</span>
+                    </div>
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href=""
+                    ><div class="menu__icon-and-text">
+                      <svg class="menu__icon"><use href="./svg/sprite.svg#icon-cube"></use></svg>
+                      <span class="menu__text">Product</span>
+                    </div>
+                    <svg class="menu__icon-arrow">
+                      <use href="./svg/sprite.svg#icon-arrow"></use></svg
+                  ></a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link is-active" href=""
+                    ><div class="menu__icon-and-text">
+                      <svg class="menu__icon">
+                        <use href="./svg/sprite.svg#icon-person"></use>
+                      </svg>
+                      <span class="menu__text">Customers</span>
+                    </div>
+                    <svg class="menu__icon-arrow">
+                      <use href="./svg/sprite.svg#icon-arrow"></use></svg
+                  ></a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href=""
+                    ><div class="menu__icon-and-text">
+                      <svg class="menu__icon">
+                        <use href="./svg/sprite.svg#icon-wallet"></use>
+                      </svg>
+                      <span class="menu__text">Income</span>
+                    </div>
+                    <svg class="menu__icon-arrow">
+                      <use href="./svg/sprite.svg#icon-arrow"></use></svg
+                  ></a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href=""
+                    ><div class="menu__icon-and-text">
+                      <svg class="menu__icon">
+                        <use href="./svg/sprite.svg#icon-discount"></use>
+                      </svg>
+                      <span class="menu__text">Promote</span>
+                    </div>
+                    <svg class="menu__icon-arrow">
+                      <use href="./svg/sprite.svg#icon-arrow"></use>
                     </svg>
-                    <span class="menu__text">Customers</span>
-                  </div>
-                  <svg class="menu__icon-arrow"><use href="./svg/sprite.svg#icon-arrow"></use></svg
-                ></a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href=""
-                  ><div class="menu__icon-and-text">
-                    <svg class="menu__icon">
-                      <use href="./svg/sprite.svg#icon-wallet"></use>
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href=""
+                    ><div class="menu__icon-and-text">
+                      <svg class="menu__icon">
+                        <use href="./svg/sprite.svg#icon-question"></use>
+                      </svg>
+                      <span class="menu__text">Help</span>
+                    </div>
+                    <svg class="menu__icon-arrow">
+                      <use href="./svg/sprite.svg#icon-arrow"></use>
                     </svg>
-                    <span class="menu__text">Income</span>
-                  </div>
-                  <svg class="menu__icon-arrow"><use href="./svg/sprite.svg#icon-arrow"></use></svg
-                ></a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href=""
-                  ><div class="menu__icon-and-text">
-                    <svg class="menu__icon">
-                      <use href="./svg/sprite.svg#icon-discount"></use>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <div class="user-info">
+              <a class="user-info__image-thumb" href="">
+                <img class="user-info__image" src="./images/photo.webp" alt="Evano" />
+              </a>
+              <a class="user-info__text" href="">
+                <p class="user-info__name">Evano</p>
+                <p class="user-info__position">Project Manager</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="customers">
+            <div class="customers-inner">
+              <div class="customers-about">
+                <div class="customers-about__text">
+                  <h2 class="customers-about__title">All Customers</h2>
+                  <p class="customers-about__category">Active Members</p>
+                </div>
+                <form class="search-form" name="search_form">
+                  <label for="search" class="visually-hidden">Search</label>
+                  <input
+                    class="search-form__input"
+                    name="search"
+                    type="text"
+                    placeholder="Search"
+                    id="search"
+                  />
+                  <button class="search-form__button" type="submit">
+                    <svg class="search-form__icon">
+                      <use href="./svg/sprite.svg#icon-search"></use>
                     </svg>
-                    <span class="menu__text">Promote</span>
-                  </div>
-                  <svg class="menu__icon-arrow"><use href="./svg/sprite.svg#icon-arrow"></use></svg>
-                </a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href=""
-                  ><div class="menu__icon-and-text">
-                    <svg class="menu__icon">
-                      <use href="./svg/sprite.svg#icon-question"></use>
+                  </button>
+                </form>
+              </div>
+
+              <table class="customers-table">
+                <tr>
+                  <th>Customer Name</th>
+                  <th>Company</th>
+                  <th>Phone Number</th>
+                  <th>Email</th>
+                  <th>Country</th>
+                  <th>Status</th>
+                </tr>
+                <tr>
+                  <td>Jane Cooper</td>
+                  <td>Microsoft</td>
+                  <td>(225) 555-0118</td>
+                  <td>jane@microsoft.com</td>
+                  <td>United States</td>
+                  <td><div>Active</div></td>
+                </tr>
+                <tr>
+                  <td>Floyd Miles</td>
+                  <td>Yahoo</td>
+                  <td>(205) 555-0100</td>
+                  <td>floyd@yahoo.com</td>
+                  <td>Kiribati</td>
+                  <td class="is-active"><div>Inactive</div></td>
+                </tr>
+                <tr>
+                  <td>Ronald Richards</td>
+                  <td>Adobe</td>
+                  <td>(302) 555-0107</td>
+                  <td>ronald@adobe.com</td>
+                  <td>Israel</td>
+                  <td class="is-active"><div>Inactive</div></td>
+                </tr>
+                <tr>
+                  <td>Marvin McKinney</td>
+                  <td>Tesla</td>
+                  <td>(252) 555-0126</td>
+                  <td>marvin@tesla.com</td>
+                  <td>Iran</td>
+                  <td><div>Active</div></td>
+                </tr>
+                <tr>
+                  <td>Jerome Bell</td>
+                  <td>Google</td>
+                  <td>(629) 555-0129</td>
+                  <td>jerome@google.com</td>
+                  <td>Réunion</td>
+                  <td><div>Active</div></td>
+                </tr>
+                <tr>
+                  <td>Kathryn Murphy</td>
+                  <td>Microsoft</td>
+                  <td>(406) 555-0120</td>
+                  <td>kathryn@microsoft.com</td>
+                  <td>Curaçao</td>
+                  <td><div>Active</div></td>
+                </tr>
+                <tr>
+                  <td>Jacob Jones</td>
+                  <td>Yahoo</td>
+                  <td>(208) 555-0112</td>
+                  <td>jacob@yahoo.com</td>
+                  <td>Brazil</td>
+                  <td><div>Active</div></td>
+                </tr>
+                <tr>
+                  <td>Kristin Watson</td>
+                  <td>Facebook</td>
+                  <td>(704) 555-0127</td>
+                  <td>kristin@facebook.com</td>
+                  <td>Åland Islands</td>
+                  <td class="is-active"><div>Inactive</div></td>
+                </tr>
+              </table>
+
+              <div class="customers-page-info">
+                <p class="customers-page-info__text">
+                  Showing data <span>1</span> to <span>8</span> of <span>256K</span> entries
+                </p>
+                <div class="customers-page-info__button-wrapper">
+                  <button class="customers-page-info__button" type="button">
+                    <svg class="customers-page-info__icon customers-page-info__icon--left">
+                      <use href="./svg/sprite.svg#icon-arrow-small"></use>
                     </svg>
-                    <span class="menu__text">Help</span>
-                  </div>
-                  <svg class="menu__icon-arrow"><use href="./svg/sprite.svg#icon-arrow"></use></svg>
-                </a>
-              </li>
-            </ul>
-          </nav>
-          <div class="user-info">
-            <img class="user-info__image" src="./images/photo.webp" alt="Evano" />
-            <div class="user-info__text">
-              <p class="user-info__name">Evano</p>
-              <p class="user-info__position">Project Manager</p>
+                  </button>
+                  <button class="customers-page-info__button is-active" type="button">1</button>
+                  <button class="customers-page-info__button" type="button">2</button>
+                  <button class="customers-page-info__button" type="button">3</button>
+                  <button class="customers-page-info__button" type="button">4</button>
+                  <span class="customers-page-info__dots">...</span>
+                  <button class="customers-page-info__button">40</button>
+                  <button class="customers-page-info__button" type="button">
+                    <svg class="customers-page-info__icon customers-page-info__icon--right">
+                      <use href="./svg/sprite.svg#icon-arrow-small"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-
-        <section class="customers">
-          <div class="customers-about">
-            <div class="customers-about__text">
-              <h2 class="customers-about__title">All Customers</h2>
-              <p class="customers-about__category">Active Members</p>
-            </div>
-            <form class="search-form" name="search_form">
-              <label for="search" class="visually-hidden">Search</label>
-              <input
-                class="search-form__input"
-                name="search"
-                type="text"
-                placeholder="Search"
-                id="search"
-              />
-              <button class="search-form__button" type="submit">
-                <svg class="search-form__icon">
-                  <use href="./svg/sprite.svg#icon-search"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
-
-          <table class="customers-table">
-            <tr>
-              <th>Customer Name</th>
-              <th>Company</th>
-              <th>Phone Number</th>
-              <th>Email</th>
-              <th>Country</th>
-              <th>Status</th>
-            </tr>
-            <tr>
-              <td>Jane Cooper</td>
-              <td>Microsoft</td>
-              <td>(225) 555-0118</td>
-              <td>jane@microsoft.com</td>
-              <td>United States</td>
-              <td><div>Active</div></td>
-            </tr>
-            <tr>
-              <td>Floyd Miles</td>
-              <td>Yahoo</td>
-              <td>(205) 555-0100</td>
-              <td>floyd@yahoo.com</td>
-              <td>Kiribati</td>
-              <td><div>Inactive</div></td>
-            </tr>
-            <tr>
-              <td>Ronald Richards</td>
-              <td>Adobe</td>
-              <td>(302) 555-0107</td>
-              <td>ronald@adobe.com</td>
-              <td>Israel</td>
-              <td><div>Inactive</div></td>
-            </tr>
-            <tr>
-              <td>Marvin McKinney</td>
-              <td>Tesla</td>
-              <td>(252) 555-0126</td>
-              <td>marvin@tesla.com</td>
-              <td>Iran</td>
-              <td><div>Active</div></td>
-            </tr>
-            <tr>
-              <td>Jerome Bell</td>
-              <td>Google</td>
-              <td>(629) 555-0129</td>
-              <td>jerome@google.com</td>
-              <td>Réunion</td>
-              <td><div>Active</div></td>
-            </tr>
-            <tr>
-              <td>Kathryn Murphy</td>
-              <td>Microsoft</td>
-              <td>(406) 555-0120</td>
-              <td>kathryn@microsoft.com</td>
-              <td>Curaçao</td>
-              <td><div>Active</div></td>
-            </tr>
-            <tr>
-              <td>Jacob Jones</td>
-              <td>Yahoo</td>
-              <td>(208) 555-0112</td>
-              <td>jacob@yahoo.com</td>
-              <td>Brazil</td>
-              <td><div>Active</div></td>
-            </tr>
-            <tr>
-              <td>Kristin Watson</td>
-              <td>Facebook</td>
-              <td>(704) 555-0127</td>
-              <td>kristin@facebook.com</td>
-              <td>Åland Islands</td>
-              <td><div>Inactive</div></td>
-            </tr>
-          </table>
-
-          <div class="page-info">
-            <p class="page-info__text">
-              Showing data <span>1</span> to <span>8</span> of <span>256K</span> entries
-            </p>
-            <div class="page-info__button-wrapper">
-              <button class="page-info__button" type="button">
-                <svg class="page-info__icon page-info__icon--left">
-                  <use href="./svg/sprite.svg#icon-arrow-small"></use>
-                </svg>
-              </button>
-              <button class="page-info__button is-active" type="button">1</button>
-              <button class="page-info__button" type="button">2</button>
-              <button class="page-info__button" type="button">3</button>
-              <button class="page-info__button" type="button">4</button>
-              <span class="page-info__dots">...</span>
-              <button class="page-info__button">40</button>
-              <button class="page-info__button" type="button">
-                <svg class="page-info__icon page-info__icon--right">
-                  <use href="./svg/sprite.svg#icon-arrow-small"></use>
-                </svg>
-              </button>
-            </div>
-          </div>
-        </section>
-      </div>
+      </section>
     </main>
   </body>
 </html>
