Develop html&scss

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   <body>
     <header class="header">
       <div class="container container--flex container--no-gap">
-        <h1 class="title">
-          <svg class="title__icon"><use href="./svg/sprite.svg#icon-setting"></use></svg
-          >Dashboard<span class="title__version">v.01</span>
+        <h1 class="logo">
+          <svg class="logo__icon"><use href="./svg/sprite.svg#icon-setting"></use></svg>
+          <span class="logo__name">Dashboard</span>
+          <span class="logo__version">v.01</span>
         </h1>
         <div class="welcome-text-wrapper">
           <p class="welcome-text">Hello, <span>Evano</span> 👋🏼</p>
