Edit distances and some other html&scss

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
       <div class="container container--flex container--no-gap">
         <h1 class="logo">
           <svg class="logo__icon"><use href="./svg/sprite.svg#icon-setting"></use></svg>
-          <span class="logo__name">Dashboard</span>
-          <span class="logo__version">v.01</span>
+          <div class="logo__text">
+            <span class="logo__name">Dashboard</span>
+            <span class="logo__version">v.01</span>
+          </div>
         </h1>
         <div class="welcome-text-wrapper">
           <p class="welcome-text">Hello, <span>Evano</span> 👋🏼</p>
